Fix line wrapping between folder icon and title for page listings

--- a/client/scss/components/_listing.scss
+++ b/client/scss/components/_listing.scss
@@ -227,8 +227,7 @@ ul.listing {
     .title-wrapper,
     h2 {
       @apply w-label-1;
-      display: inline-flex;
-      gap: theme('spacing.2');
+      display: inline;
       margin: 0;
       vertical-align: middle;
 
